--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,13 @@ button {
     width: 60%;
     margin: auto;
 }
+
+.hidden {
+    visibility: hidden;
+    display: none;
+}
+
+#create_category {
+    width: 50%;
+    margin: auto;
+}
