finish image upload functionality by admin ensure that only valid images are selected by the admin before upload

--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,12 @@ button {
     width: 50%;
     margin: auto;
 }
+
+.message {
+    font-size: 10px;
+}
+
+.center-div {
+    width: 50%;
+    margin: auto;
+}
