edit the pages to add moren-xris images

--- a/css/admin/style.css
+++ b/css/admin/style.css
@@ -31,7 +31,7 @@ footer {
     padding-top: 13%;
     padding-bottom: 13%;
     margin-bottom: 50px;
-    background: url("vacation1.png") center center fixed;
+    background: url("homepage.jpg") center center fixed;
 }
 
 .intro h1 {
