--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ nav ul li a {
     padding-top: 13%;
     padding-bottom: 13%;
     margin-bottom: 50px;
-    background: url("vacation1.png") center center fixed;
+    background: url("homepage.jpg") center center fixed;
 }
 
 .intro h1 {
