edit side navigation on  small devices

--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,22 @@ button {
     height: 60px;
     width: auto;
 }
+
+#slide-out {
+    background-color: #412234;
+    overflow-y: hidden;
+}
+
+.side-nav a {
+    padding: none;
+    margin-left: 30px;
+}
+
+.side-nav li {
+    list-style: none;
+}
+
+.side-nav {
+    top: 0;
+    left: 0;
+}
