--- a/css/admin/style.css
+++ b/css/admin/style.css
@@ -16,45 +16,19 @@ nav ul li a {
     color: #333;
 }
 
-header,
-main,
-footer {
-    padding-left: 300px;
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+    padding-left: 0;
+    }
 }
 
 .container {
     width: 80%;
 }
 
-.intro {
-    text-align: center;
-    padding-top: 13%;
-    padding-bottom: 13%;
-    margin-bottom: 50px;
-    background: url("homepage.jpg") center center fixed;
-}
-
-.intro h1 {
-    font-weight: 900;
-    text-transform: uppercase;
-}
-
-.intro h5 {
-    text-transform: uppercase;
-    background-color: #f5f5f5;
-    padding: 10px;
-    color: #333333;
-    display: inline-block;
-    font-size: 1.2rem;
-}
-
 .text-justify {
     text-align: justify;
     margin-top: 1px;
-}
-
-.amenities {
-    padding-left: 30px;
 }
 
 .card {
@@ -63,58 +37,6 @@ footer {
 
 .main-body {
     background-color: #eee;
-}
-
-.slides div {
-    background-color: white;
-    width: 100%;
-    display: inline-block;
-    display: none;
-}
-
-.slides img {
-    width: 100%;
-    height: auto;
-}
-
-button {
-    position: absolute;
-}
-
-.next {
-    right: 5px;
-}
-
-.prev {
-    left: 5px;
-}
-
-#about-footer {
-    background: url("http://localhost/morren/images/hotel1.png") repeat center center fixed;
-    color: #fff;
-}
-
-.small-quote {
-    font-size: 10px;
-    font-style: italic;
-}
-
-#testimonial {
-    padding-top: 20px;
-    background-color: rgba(0, 0, 0, 0.5)
-}
-
-.carousel-item>img {
-    height: 300px;
-}
-
-.carousel-slider {
-    margin-top: 20px;
-}
-
-.gallery {
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 
 .pad-list {
@@ -179,4 +101,9 @@ button {
 }
 .user-info {
     background-color: rgba(0, 0, 0, 0.5)
+}
+
+.logo {
+    height: 60px;
+    width: auto;
 }
